@@ -1,7 +1,7 @@
 #ifndef HTTPD_VERSION_H
 #define HTTPD_VERSION_H
 
-#define VERSION "github.com/anpnrynn/httpd-0.24.01-2"
+#define VERSION "NAME=github_com_anpnrynn_httpd-0.24.01-3"
 
 
 
