@@ -1,9 +1,17 @@
+13/01/2024 - 3
+==============
+Cleanup of makefile
+Changes to the paths
+Changes to makefile , addition of distclean, install, installclean
+By default installs to /tmp/httpd/
+ServerName+version displayed in logs and http response is github url converted to a string that replaces '/' with '_'
+
+
 13/01/2024 - 2
 ==============
 Cleanup of makefile
 Testing pthreads and cpp11threads
 Testing with -O2 flag
-All seems stable
 
 
 13/01/2024 - 1
